Assembler/tests/ok/constants/string_containing_escaped_quotes.asm
empty: .string "Programmers like to say \"Hello world\""
