Assembler/tests/bad/constants/bad_quote_escapes.asm
unterm: .string "Programmers say "hello world""
